[project]
name = "matter-task-queue"
description = "A template for new Matter's library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Tomer Sasson", email = "tomer@thisismatter.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "matter-exceptions==1.0.1",
    "kombu==5.2.4",
    "celery[sqs]==5.2.7",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Matter-Tech/matter-task-queue#readme"
Issues = "https://github.com/Matter-Tech/matter-task-queue/issues"
Source = "https://github.com/Matter-Tech/matter-task-queue"

[project.optional-dependencies]
sentry = [
    "sentry-sdk==1.15.0",
]

[tool.hatch.version]
path = "matter_task_queue/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "matter-task-queue[sentry]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-celery",
    "testcontainers[localstack]",
    "requests",
    "black",
    "mypy",
    "ruff",
    "python-dotenv",
]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=matter_task_queue --cov=tests {args}"
no-cov = "test --no-cov {args}"
typing = "mypy --install-types --non-interactive {args:matter_task_queue tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
lint = [
  "style",
]

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.ruff]
target-version = "py310"
line-length = 120
ignore = ["F401", "E731"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "matter_task_queue/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under=80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-x"
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::ResourceWarning"]